--- a/index.html
+++ b/index.html
@@ -26,16 +26,15 @@
             </h1>
         </div>
         <div class="desktop_menu">
-            <p class="first_part">BLOG</p>
-            <p class="second_part">ABOUT</p>
-            <p class="third_part">LINKS</p>
-            <p class="fouth_part">PROJECTS</p>
+            <a href="" class="first_part">BLOG</a>
+            <a href="" class="second_part">ABOUT</a>
+            <a href="" class="third_part">LINKS</a>
+            <a href="" class="fouth_part">PROJECTS</a>
         </div>
         <div class="top_padding_burger"><img width="25px" height="16px" src="photos\burger.png" alt="burger">
         </div>
     </header>
     <artcile>
-
         <section class="top_section">
             <div>
                 <picture>
@@ -44,17 +43,15 @@
                     <img src="photos\top_photo_mobile.jpg">
                 </picture>
             </div>
-
             <div>
                 <h2 class="about_blog">A few words about this blog platform, Ghost, and how this site was made</h2>
                 <h3 class="small_text_about_blog">Why Ghost (& Figma) instead of Medium, WordPress or other options?
                 </h3>
             </div>
-
         </section>
         <section class="section_with_photo">
             <h2 class="articles">All articles</h2>
-            <div class="div_with_photo">
+            <div class="photo">
                 <div class="atribute">
                     <img class="second_page_photos" width="304px" height="176px" src="photos\1.jpg"
                         alt="Granny gives everyone the finger">
@@ -76,7 +73,7 @@
                     <div>
                         <p class="text_after_images">Here are some things you should know regarding how we work </p>
                     </div>
-                </div> 
+                </div>
                 <div class="atribute">
                     <img class="second_page_photos" width="304px" height="176px" src="photos\4.jpg" alt="remote work">
                     <div>
@@ -103,11 +100,7 @@
                     </div>
                 </div>
             </div>
-
-
-
         </section>
-
     </artcile>
     <footer class="footer_black_square">
         <div class="square_first_text">
@@ -120,22 +113,16 @@
             <div class="bold_text scroll_text">SUSPENSE</div>
             <div class="scroll_text" class="growth">GROWTH</div>
         </div>
-
-
-
         <div class="bottom_rose">
             <picture>
                 <source media="(max-width:854px)" width="245px" height="35px" srcset="photos\bottom_rose_mobile.png" />
                 <source media="(min-width:854px)" width="300px" height="40px" srcset="photos\bottom_rose_mobile.png" />
-                <img src="photos\bottom_rose_mobile.png"  alt="NORDIC ROSE">
+                <img src="photos\bottom_rose_mobile.png" alt="NORDIC ROSE">
             </picture>
-            
-            
-
         </div>
         <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
             egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</p>
-        <div class="links_div">
+        <div class="links_padding">
             <ul class="links">
                 <li><a class="link" href="">Twitter</a></li>
                 <li><a class="link" href="">Linkedln</a></li>
