--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,9 +20,9 @@
         <div class="top_padding_nordic">
             <h1>
                 <picture>
-                    <source media="(max-width:854px)" srcset="photos\mobile_rose.png" />
-                    <source media="(min-width:854px)" width="395px" height="38px" srcset="photos\desktop_rose.png" />
-                    <img class="rose" width="217px" height="24px" src="photos\mobile_rose.png" alt="NORDIC ROSE">
+                    <source media="(max-width:854px)" srcset="photos/mobile_rose.png" />
+                    <source media="(min-width:854px)" width="395" height="38" srcset="photos/desktop_rose.png" />
+                    <img class="rose" width="217" height="24" src="photos/mobile_rose.png" alt="NORDIC ROSE">
                 </picture>
             </h1>
         </div>
@@ -31,16 +32,16 @@
             <a href="" class="third_part">LINKS</a>
             <a href="" class="fouth_part">PROJECTS</a>
         </div>
-        <div class="top_padding_burger"><img width="25px" height="16px" src="photos\burger.png" alt="burger">
+        <div class="top_padding_burger"><img width="25" height="16" src="photos/burger.png" alt="burger">
         </div>
     </header>
-    <artcile>
+    <artcle>
         <section class="top_section">
             <div>
                 <picture>
-                    <source media="(max-width:854px)" srcset="photos\top_photo_mobile.jpg" />
-                    <source media="(min-width:854px)" srcset="photos\desktop.jpg" />
-                    <img src="photos\top_photo_mobile.jpg">
+                    <source media="(max-width:854px)" srcset="photos/top_photo_mobile.jpg" />
+                    <source media="(min-width:854px)" srcset="photos/desktop.jpg" />
+                    <img src="photos/top_photo_mobile.jpg">
                 </picture>
             </div>
             <div>
@@ -53,7 +54,7 @@
             <h2 class="articles">All articles</h2>
             <div class="photo">
                 <div class="atribute">
-                    <img class="second_page_photos" width="304px" height="176px" src="photos\1.jpg"
+                    <img class="second_page_photos" width="304" height="176" src="photos/1.jpg"
                         alt="Granny gives everyone the finger">
                     <div>
                         <p class="text_after_images">Granny gives everyone the finger, and other tips from OFFF
@@ -61,21 +62,21 @@
                     </div>
                 </div>
                 <div class="atribute">
-                    <img class="second_page_photos" width="304px" height="176px" src="photos\2.jpg" alt="Hello world">
+                    <img class="second_page_photos" width="304" height="176" src="photos/2.jpg" alt="Hello world">
                     <div>
                         <p class="text_after_images">Hello world, or, in other words, why this blog exists
                         </p>
                     </div>
                 </div>
                 <div class="atribute">
-                    <img class="second_page_photos" width="304px" height="176px" src="photos\3.jpg"
+                    <img class="second_page_photos" width="304" height="176" src="photos/3.jpg"
                         alt="regarding how wework">
                     <div>
                         <p class="text_after_images">Here are some things you should know regarding how we work </p>
                     </div>
                 </div>
                 <div class="atribute">
-                    <img class="second_page_photos" width="304px" height="176px" src="photos\4.jpg" alt="remote work">
+                    <img class="second_page_photos" width="304" height="176" src="photos/4.jpg" alt="remote work">
                     <div>
                         <p class="text_after_images">Updating list of 50+ sources on distributed teams, remote
                             work, and
@@ -83,7 +84,7 @@
                     </div>
                 </div>
                 <div class="atribute">
-                    <img class="second_page_photos" width="304px" height="176px" src="photos\5.jpg"
+                    <img class="second_page_photos" width="304" height="176" src="photos/5.jpg"
                         alt="A few words about this blog platform">
                     <div>
                         <p class="text_after_images">A few words about this blog platform, Ghost, and how this site was
@@ -91,7 +92,7 @@
                     </div>
                 </div>
                 <div class="atribute">
-                    <img class="second_page_photos" width="304px" height="176px" src="photos\6.jpg"
+                    <img class="second_page_photos" width="304" height="176" src="photos/6.jpg"
                         alt="modern remote working">
                     <div>
                         <p class="text_after_images">How modern remote working tools get along with Old School
@@ -101,23 +102,23 @@
                 </div>
             </div>
         </section>
-    </artcile>
+    </artcle>
     <footer class="footer_black_square">
         <div class="square_first_text">
             <div class="bold_text scroll_text">DIGITAL PRODUCT DESIGN</div>
-            <div class="scroll_text" class="work">REMOTE WORK</div>
+            <div class="scroll_text work">REMOTE WORK</div>
             <div class="bold_text scroll_text">UX DESIGN</div>
-            <div class="scroll_text" class="teams">DISTRIBUTED TEAMS</div>
+            <div class="scroll_text teams">DISTRIBUTED TEAMS</div>
             <div class="bold_text scroll_text">CREATIVITY</div>
-            <div class="scroll_text" class="strategy">STRATEGY</div>
+            <div class="scroll_text strategy">STRATEGY</div>
             <div class="bold_text scroll_text">SUSPENSE</div>
-            <div class="scroll_text" class="growth">GROWTH</div>
+            <div class="scroll_text growth">GROWTH</div>
         </div>
         <div class="bottom_rose">
             <picture>
-                <source media="(max-width:854px)" width="245px" height="35px" srcset="photos\bottom_rose_mobile.png" />
-                <source media="(min-width:854px)" width="300px" height="40px" srcset="photos\bottom_rose_mobile.png" />
-                <img src="photos\bottom_rose_mobile.png" alt="NORDIC ROSE">
+                <source media="(max-width:854px)" width="245" height="35" srcset="photos/bottom_rose_mobile.png" />
+                <source media="(min-width:854px)" width="300" height="40" srcset="photos/bottom_rose_mobile.png" />
+                <img src="photos/bottom_rose_mobile.png" alt="NORDIC ROSE">
             </picture>
         </div>
         <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
@@ -130,7 +131,7 @@
             </ul>
         </div>
 
-        <p class="copy_text">© 2012–2020 Nordic Rose Co.  All rights reserved.</p>
+        <p class="copy_text">© 2012–2020 Nordic Rose Co. All rights reserved.</p>
 
     </footer>
 </body>
