--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="top_padding_burger"><img width="25" height="16" src="photos/burger.png" alt="burger">
         </div>
     </header>
-    <artcle>
+    <article>
         <section class="top_section">
             <div>
                 <picture>
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </section>
-    </artcle>
+    </article>
     <footer class="footer_black_square">
         <div class="square_first_text">
             <div class="bold_text scroll_text">DIGITAL PRODUCT DESIGN</div>
