--- a/post.html
+++ b/post.html
@@ -35,11 +35,8 @@
         <div class="top_padding_burger"><img width="25" height="16" src="photos/burger.png" alt="burger">
         </div>
     </header>
-    <artcle>
-
+    <article>
         <section class="top_section">
-
-
             <div>
                 <h2 class="about_blog">A few words about this blog platform, Ghost, and how this site was made</h2>
                 <h3 class="small_text_about_blog">Why Ghost (& Figma) instead of Medium, WordPress or other options?
@@ -50,7 +47,7 @@
                     <source media="(max-width:854px)" width="375" height="234" srcset="photos/top_photo_mobile.jpg" />
                     <source media="(max-width:854px)" width="854" height="533" srcset="photos/desktop.jpg" />
                     <source media="(min-width:1440px)" width="1440" height="900" srcset="photos/big_desktop.png" />
-                    <img src="photos/big_desktop.png" alt="big photo">
+                    <img src="photos/big_desktop.png" width="1440" height="900" alt="big photo">
                 </picture>
             </div>
         </section>
@@ -90,7 +87,7 @@
                 <picture>
                     <source media="(max-width:854px)" width="375" height="250" srcset="photos\rectangle.png" />
                     <source media="(min-width:854px)" width="854" height="570" srcset="photos/rectangle_desktop.jpg" />
-                    <img src="photos/rectangle_desktop.jpg" alt="rectangle">
+                    <img src="photos/rectangle_desktop.jpg" width="854" height="570" alt="rectangle">
                 </picture>
                 <figcaption class="rectangle_caption">Image caption centered this way and I’ll make this a bit longer to
                     indicate the amount of line-height</figcaption>
@@ -207,43 +204,39 @@
                     up</button>
             </form>
         </section>
-        <footer class="footer_black_square">
-            <div class="square_first_text">
-                <div class="bold_text scroll_text">DIGITAL PRODUCT DESIGN</div>
-                <div class="scroll_text work">REMOTE WORK</div>
-                <div class="bold_text scroll_text">UX DESIGN</div>
-                <div class="scroll_text teams">DISTRIBUTED TEAMS</div>
-                <div class="bold_text scroll_text">CREATIVITY</div>
-                <div class="scroll_text strategy">STRATEGY</div>
-                <div class="bold_text scroll_text">SUSPENSE</div>
-                <div class="scroll_text growth">GROWTH</div>
-            </div>
+        <article>
+            <footer class="footer_black_square">
+                <div class="square_first_text">
+                    <div class="scroll_text bold_text ">DIGITAL PRODUCT DESIGN</div>
+                    <div class="scroll_text work">REMOTE WORK</div>
+                    <div class="scroll_text bold_text ">UX DESIGN</div>
+                    <div class="scroll_text teams">DISTRIBUTED TEAMS</div>
+                    <div class="scroll_text bold_text">CREATIVITY</div>
+                    <div class="scroll_text strategy">STRATEGY</div>
+                    <div class="scroll_text bold_text">SUSPENSE</div>
+                    <div class="scroll_text growth">GROWTH</div>
+                </div>
+                <div class="bottom_rose">
+                    <picture>
+                        <source media="(max-width:854px)" width="245" height="35"
+                            srcset="photos/bottom_rose_mobile.png" />
+                        <source media="(min-width:854px)" width="300" height="40"
+                            srcset="photos/bottom_rose_mobile.png" />
+                        <img src="photos/bottom_rose_mobile.png" width="300" height="40" alt="NORDIC ROSE">
+                    </picture>
+                </div>
+                <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
+                    egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</p>
+                <div class="links_div">
+                    <ul class="links">
+                        <li><a class="link" href="">Twitter</a></li>
+                        <li><a class="link" href="">Linkedln</a></li>
+                        <li><a class="link" href="">RSS</a></li>
+                    </ul>
+                </div>
+                <p class="copy_text">© 2012-2020 Nordic Rose Co. All rights reserved.</p>
+            </footer>
 
-
-
-            <div class="bottom_rose">
-                <picture>
-                    <source media="(max-width:854px)" width="245" height="35" srcset="photos/bottom_rose_mobile.png" />
-                    <source media="(min-width:854px)" width="300" height="40" srcset="photos/bottom_rose_mobile.png" />
-                    <img src="photos/bottom_rose_mobile.png" alt="NORDIC ROSE">
-                </picture>
-
-
-
-            </div>
-            <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
-                egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</p>
-            <div class="links_div">
-                <ul class="links">
-                    <li><a class="link" href="">Twitter</a></li>
-                    <li><a class="link" href="">Linkedln</a></li>
-                    <li><a class="link" href="">RSS</a></li>
-                </ul>
-            </div>
-
-            <p class="copy_text">© 2012-2020 Nordic Rose Co. All rights reserved.</p>
-
-        </footer>
 </body>
 
 </html>
