first desktop commit

--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.cdnfonts.com/css/new-york-extra-large" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/sf-mono" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.cdnfonts.com/css/new-york-extra-large" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/sf-mono" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
     <title>Nordic Rose</title>
 </head>
 
 <body>
     <header class="header">
-
         <div class="top_padding_nordic">
             <h1>
                 <picture>
                     <source media="(max-width:854px)" srcset="photos/mobile_rose.png" />
                     <source media="(min-width:854px)" width="395" height="38" srcset="photos/desktop_rose.png" />
-                    <img class="rose" width="217" height="24" src="photos/mobile_rose.png" alt="NORDIC ROSE">
+                    <img class="rose" width="217" height="24" src="photos/mobile_rose.png" alt="NORDIC ROSE" />
                 </picture>
             </h1>
         </div>
         <div class="desktop_menu">
-            <a href="" class="first_part">BLOG</a>
-            <a href="" class="second_part">ABOUT</a>
-            <a href="" class="third_part">LINKS</a>
-            <a href="" class="fouth_part">PROJECTS</a>
+            <a href="" class="menu_link">BLOG</a>
+            <a href="" class="menu_link">ABOUT</a>
+            <a href="" class="menu_link">LINKS</a>
+            <a href="" class="menu_link">PROJECTS</a>
         </div>
-        <div class="top_padding_burger"><img width="25" height="16" src="photos/burger.png" alt="burger">
+        <div class="top_padding_burger">
+            <img width="25" height="16" src="photos/burger.png" alt="burger" />
         </div>
     </header>
-    <artcle>
+    <article>
         <section class="top_section">
             <div>
                 <picture>
-                    <source media="(max-width:854px)" srcset="photos/top_photo_mobile.jpg" />
-                    <source media="(min-width:854px)" srcset="photos/desktop.jpg" />
-                    <img src="photos/top_photo_mobile.jpg">
+                    <source media="(max-width:854px)" width="375" height="234" srcset="photos/top_photo_mobile.jpg" />
+                    <source media="(max-width:854px)" width="854" height="533" srcset="photos/desktop.jpg" />
+                    <img src="photos/big_desktop.png" width="854" height="533" alt="big photo" />
                 </picture>
             </div>
             <div>
-                <h2 class="about_blog">A few words about this blog platform, Ghost, and how this site was made</h2>
-                <h3 class="small_text_about_blog">Why Ghost (& Figma) instead of Medium, WordPress or other options?
+                <h2 class="about_blog">
+                    A few words about this blog platform, Ghost, and how this site was
+                    made
+                </h2>
+                <h3 class="small_text_about_blog">
+                    Why Ghost (& Figma) instead of Medium, WordPress or other options?
                 </h3>
             </div>
         </section>
@@ -55,74 +58,86 @@
             <div class="photo">
                 <div class="atribute">
                     <img class="second_page_photos" width="304" height="176" src="photos/1.jpg"
-                        alt="Granny gives everyone the finger">
+                        alt="Granny gives everyone the finger" />
                     <div>
-                        <p class="text_after_images">Granny gives everyone the finger, and other tips from OFFF
-                            Barcelona</p>
+                        <p class="text_after_images">
+                            Granny gives everyone the finger, and other tips from OFFF
+                            Barcelona
+                        </p>
                     </div>
                 </div>
                 <div class="atribute">
-                    <img class="second_page_photos" width="304" height="176" src="photos/2.jpg" alt="Hello world">
+                    <img class="second_page_photos" width="304" height="176" src="photos/2.jpg" alt="Hello world" />
                     <div>
-                        <p class="text_after_images">Hello world, or, in other words, why this blog exists
+                        <p class="text_after_images">
+                            Hello world, or, in other words, why this blog exists
                         </p>
                     </div>
                 </div>
                 <div class="atribute">
                     <img class="second_page_photos" width="304" height="176" src="photos/3.jpg"
-                        alt="regarding how wework">
+                        alt="regarding how we work" />
                     <div>
-                        <p class="text_after_images">Here are some things you should know regarding how we work </p>
+                        <p class="text_after_images">
+                            Here are some things you should know regarding how we work
+                        </p>
                     </div>
                 </div>
                 <div class="atribute">
-                    <img class="second_page_photos" width="304" height="176" src="photos/4.jpg" alt="remote work">
+                    <img class="second_page_photos" width="304" height="176" src="photos/4.jpg" alt="remote work" />
                     <div>
-                        <p class="text_after_images">Updating list of 50+ sources on distributed teams, remote
-                            work, and
-                            how to make it all work better</p>
+                        <p class="text_after_images">
+                            Updating list of 50+ sources on distributed teams, remote work,
+                            and how to make it all work better
+                        </p>
                     </div>
                 </div>
                 <div class="atribute">
                     <img class="second_page_photos" width="304" height="176" src="photos/5.jpg"
-                        alt="A few words about this blog platform">
+                        alt="A few words about this blog platform" />
                     <div>
-                        <p class="text_after_images">A few words about this blog platform, Ghost, and how this site was
-                            made</p>
+                        <p class="text_after_images">
+                            A few words about this blog platform, Ghost, and how this site
+                            was made
+                        </p>
                     </div>
                 </div>
                 <div class="atribute">
                     <img class="second_page_photos" width="304" height="176" src="photos/6.jpg"
-                        alt="modern remote working">
+                        alt="modern remote working" />
                     <div>
-                        <p class="text_after_images">How modern remote working tools get along with Old School
+                        <p class="text_after_images">
+                            How modern remote working tools get along with Old School
                             Cowboy's methods
                         </p>
                     </div>
                 </div>
             </div>
         </section>
-    </artcle>
+    </article>
     <footer class="footer_black_square">
         <div class="square_first_text">
-            <div class="bold_text scroll_text">DIGITAL PRODUCT DESIGN</div>
+            <div class="scroll_text bold_text">DIGITAL PRODUCT DESIGN</div>
             <div class="scroll_text work">REMOTE WORK</div>
-            <div class="bold_text scroll_text">UX DESIGN</div>
+            <div class="scroll_text bold_text">UX DESIGN</div>
             <div class="scroll_text teams">DISTRIBUTED TEAMS</div>
-            <div class="bold_text scroll_text">CREATIVITY</div>
+            <div class="scroll_text bold_text">CREATIVITY</div>
             <div class="scroll_text strategy">STRATEGY</div>
-            <div class="bold_text scroll_text">SUSPENSE</div>
+            <div class="scroll_text bold_text">SUSPENSE</div>
             <div class="scroll_text growth">GROWTH</div>
         </div>
         <div class="bottom_rose">
             <picture>
                 <source media="(max-width:854px)" width="245" height="35" srcset="photos/bottom_rose_mobile.png" />
                 <source media="(min-width:854px)" width="300" height="40" srcset="photos/bottom_rose_mobile.png" />
-                <img src="photos/bottom_rose_mobile.png" alt="NORDIC ROSE">
+                <img src="photos/bottom_rose_mobile.png" width="300" height="40" alt="NORDIC ROSE" />
             </picture>
         </div>
-        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
-            egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</p>
+        <p class="lorem">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit
+            tempus erat egestas efficitur. In hac habitasse platea dictumst. Fusce a
+            nunc eget ligula.
+        </p>
         <div class="links_padding">
             <ul class="links">
                 <li><a class="link" href="">Twitter</a></li>
@@ -132,7 +147,6 @@
         </div>
 
         <p class="copy_text">© 2012–2020 Nordic Rose Co. All rights reserved.</p>
-
     </footer>
 </body>
 
