--- a/post.html
+++ b/post.html
@@ -27,10 +27,10 @@
             </h1>
         </div>
         <div class="desktop_menu">
-            <a href="" class="first_part">BLOG</a>
-            <a href="" class="second_part">ABOUT</a>
-            <a href="" class="third_part">LINKS</a>
-            <a href="" class="fouth_part">PROJECTS</a>
+            <a href="" class="menu_link">BLOG</a>
+            <a href="" class="menu_link">ABOUT</a>
+            <a href="" class="menu_link">LINKS</a>
+            <a href="" class="menu_link">PROJECTS</a>
         </div>
         <div class="top_padding_burger"><img width="25" height="16" src="photos/burger.png" alt="burger">
         </div>
